--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -38,7 +38,7 @@ body {
 }
 
 #logo {
-    max-width: 30%;
+    max-width: 10%;
     height: auto;
     margin: 20px 0;
     display: block;
@@ -47,19 +47,12 @@ body {
 }
 
 #logoDarkBackgrounds {
-    max-width: 15%;
+    max-width: 10%;
     height: auto;
-    margin: 5px 0;
-    display: block;
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-top: 15px;
     background-color: #fff;
-    /* Fondo blanco */
     border-radius: 10px;
-    /* Redondear los bordes, */
     padding: 10px;
-    /* Agregar un poco de espacio alrededor */
-
 }
 
 form {
@@ -145,11 +138,14 @@ nav a:hover {
 }
 
 #headerLoginRegister {
-    align-items: center;
     background-color: rgb(0, 44, 151);
     color: #fff;
     padding: 10px;
+    padding-bottom: 25px;
     text-align: center;
+    display: flex;
+    flex-direction: column-reverse; /* Cambia a 'column-reverse' */
+    align-items: center;
 }
 
 #headerMenu {
@@ -172,7 +168,8 @@ table {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-th, td {
+th,
+td {
     font-family: "Bahnschrift", Arial, sans-serif;
     border: 1px solid #ddd;
     padding: 8px;
