--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -47,12 +47,13 @@ body {
 }
 
 #logoDarkBackgrounds {
-    max-width: 10%;
-    height: auto;
-    margin-top: 15px;
+    max-width: 100%;
+    height: 100px;
+    margin-top: 5px;
+    margin-right: 15px;
     background-color: #fff;
     border-radius: 10px;
-    padding: 10px;
+    padding: 7.5px;
 }
 
 form {
@@ -96,6 +97,7 @@ h1 {
     font-family: "Bahnschrift", Arial, sans-serif;
     margin: 0;
     padding-bottom: 0px;
+    padding-right: 0px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -142,9 +144,9 @@ nav a:hover {
     color: #fff;
     padding: 10px;
     padding-bottom: 25px;
-    text-align: center;
+    text-align: left;
     display: flex;
-    flex-direction: column-reverse; /* Cambia a 'column-reverse' */
+    flex-direction: column;
     align-items: center;
 }
 
@@ -155,6 +157,7 @@ nav a:hover {
     color: #fff;
     padding: 10px;
     text-align: left;
+    flex-direction: row;
 }
 
 section {
