--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -87,6 +87,11 @@ body.show-form {
 }
 
 #insert-form-container {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
     border-radius: 8px;
     display: none;
     position: fixed;
@@ -94,10 +99,9 @@ body.show-form {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: transparent;
-    padding: 40px; /* Ajusta el padding según sea necesario para hacer el contenedor más grande */
-    width: 100%; /* Ajusta el ancho del contenedor según sea necesario */
-    max-width: 100%; /* Establece un ancho máximo si deseas que el contenedor no se vuelva demasiado grande en pantallas grandes */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 40px; 
+    width: 100%;
+    max-width: 100%;
     z-index: 1000;
 }
 
@@ -272,8 +276,8 @@ tr:nth-child(even) {
 #add-process-btn {
     display: flex;
     flex-direction: row;
-    width: 125px; /* Ancho fijo */
-    margin: 15px auto; /* Margen superior e inferior de 15px y centrado horizontal */
+    width: 125px; 
+    margin: 15px 0; 
     font-family: "Bahnschrift", Arial, sans-serif;
     background-color: rgb(0, 44, 151);
     color: #fff;
@@ -281,19 +285,25 @@ tr:nth-child(even) {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    margin-bottom: 25px;
-    
+    justify-content: flex-start; 
+    margin-bottom: 25px; 
+    padding-left: 15px;
 }
 
-#overlay {
+textarea {
+    width: 100%; 
+    resize: vertical; 
+}
+
+#overlay { 
     display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
-    z-index: 999; /* Asegura que esté por encima del contenido */
+    background: rgba(0, 0, 0, 0.5); 
+    z-index: 999;
 }
 
 .form-column {
